form template cleanup

--- a/src/app/shop/shop-item-form/shop-item-form.component.html
+++ b/src/app/shop/shop-item-form/shop-item-form.component.html
@@ -1,68 +1,145 @@
-<div class="modal fade" [attr.id]="shopItem ? shopItem.id : 'shopItemModal'" tabindex="-1" role="dialog" aria-labelledby="shopItemModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                
-                <h4 class="modal-title" id="shopItemModalLabel">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Shop Item
-                </h4>
-            </div>
-            <div class="modal-body">
-              <form novalidate [formGroup]="shopItemForm">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="productName">ID</label>
-                        <input required class="form-control" id="id" placeholder="identifier" [formControl]="shopItemForm.controls['id']">
-                        <div *ngIf="validation.check('id').result" class="alert alert-danger">{{validation.check('id').message}}</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="name">Product Name</label>
-                        <input required class="form-control" id="name" [formControl]="shopItemForm.controls['name']">
-                        <div *ngIf="validation.check('name').result" class="alert alert-danger">{{validation.check('name').message}}</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="code">Product Code</label>
-                        <input required class="form-control" id="code" placeholder="e.g. KPX-285C" [formControl]="shopItemForm.controls['code']">
-                        <div *ngIf="validation.check('code').result" class="alert alert-danger">{{validation.check('code').message}}</div>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="unitPrice">Unit Price</label>
-                        <input required class="form-control" id="unitPrice" [formControl]="shopItemForm.controls['unitPrice']">
-                        <div *ngIf="validation.check('unitPrice').result" class="alert alert-danger">{{validation.check('unitPrice').message}}</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="quantityInStock">Quantity In Stock</label>
-                        <input required class="form-control" id="quantityInStock" [formControl]="shopItemForm.controls['quantityInStock']">
-                        <div *ngIf="validation.check('quantityInStock').result" class="alert alert-danger">{{validation.check('quantityInStock').message}}</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="releaseDate">Release Date</label>
-                        <p-calendar
-                            id="releaseDate"
-                            placeholder="mm/dd/yyyy"
-                            inputStyleClass="form-control"
-                            [formControl]="shopItemForm.controls['releaseDate']">
-                        </p-calendar>
-                        <div *ngIf="validation.check('releaseDate').result" class="alert alert-danger">{{validation.check('releaseDate').message}}</div>
-                    </div>
+<div
+  class="modal fade"
+  [attr.id]="shopItem ? shopItem.id : 'shopItemModal'"
+  role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button 
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="shopItemModalLabel">
+          <span
+            class="glyphicon glyphicon-edit"
+            aria-hidden="true">
+          </span>
+          Shop Item
+        </h4>
+      </div>
+        <div class="modal-body">
+          <form novalidate [formGroup]="shopItemForm">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="id">ID</label>
+                  <input 
+                    required
+                    class="form-control"
+                    id="id"
+                    placeholder="identifier"
+                    formControlName="id">
+                  <div
+                    *ngIf="validation.check('id').result"
+                    class="alert alert-danger">
+                    {{validation.check('id').message}}
                   </div>
                 </div>
                 <div class="form-group">
-                    <label for="description">Description</label>
-                    <textarea class="form-control" id="description" placeholder="a brief description of the product" [formControl]="shopItemForm.controls['description']"></textarea>
-                    <div *ngIf="validation.check('description').result" class="alert alert-danger">{{validation.check('description').message}}</div>
+                  <label for="name">Product Name</label>
+                  <input
+                    required
+                    class="form-control"
+                    id="name"
+                    formControlName="name">
+                  <div
+                    *ngIf="validation.check('name').result"
+                    class="alert alert-danger">
+                    {{validation.check('name').message}}
+                  </div>
                 </div>
-                <div class="modal-footer">
-                    <button [disabled]="!shopItemForm.valid" type="button" class="btn btn-primary" data-dismiss="modal" (click)='submitItem(shopItemForm)'>Save & Close</button>
+                <div class="form-group">
+                  <label for="code">Product Code</label>
+                  <input
+                    required
+                    class="form-control"
+                    id="code"
+                    placeholder="e.g. KPX-285C"
+                    formControlName="code">
+                  <div
+                    *ngIf="validation.check('code').result"
+                    class="alert alert-danger">
+                    {{validation.check('code').message}}
+                  </div>
                 </div>
-              </form>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="unitPrice">Unit Price</label>
+                  <input
+                    required
+                    class="form-control"
+                    id="unitPrice"
+                    formControlName="unitPrice">
+                  <div
+                    *ngIf="validation.check('unitPrice').result"
+                    class="alert alert-danger">
+                    {{validation.check('unitPrice').message}}
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="quantityInStock">Quantity In Stock</label>
+                  <input
+                    required
+                    class="form-control"
+                    id="quantityInStock"
+                    formControlName="quantityInStock">
+                  <div
+                    *ngIf="validation.check('quantityInStock').result"
+                    class="alert alert-danger">
+                    {{validation.check('quantityInStock').message}}
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="releaseDate">Release Date</label>
+                  <p-calendar
+                    id="releaseDate"
+                    placeholder="mm/dd/yyyy"
+                    inputStyleClass="form-control"
+                    formControlName="releaseDate">
+                  </p-calendar>
+                  <div
+                    *ngIf="validation.check('releaseDate').result"
+                    class="alert alert-danger">
+                    {{validation.check('releaseDate').message}}
+                  </div>
+                </div>
+              </div>
             </div>
+            <div class="row">
+              <div class="form-group col-md-12">
+                <label for="description">Description</label>
+                <textarea
+                  class="form-control"
+                  id="description"
+                  placeholder="a brief description of the product"
+                  formControlName="description">
+                </textarea>
+                <div
+                  *ngIf="validation.check('description').result"
+                  class="alert alert-danger">
+                  {{validation.check('description').message}}
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group col-md-12">
+                <button
+                  [disabled]="!shopItemForm.valid"
+                  type="button"
+                  class="btn btn-primary pull-right"
+                  data-dismiss="modal"
+                  (click)='submitItem(shopItemForm)'>
+                  Save & Close
+                </button>                                            
+              </div>
+            </div>
+          </form>
         </div>
+        <div class="modal-footer"></div>
     </div>
+  </div>
 </div>
